syntax = "proto2";
package org.sudoku.auth.v1.user;

message changed_password {
  required string userId = 1;
  required string newPassword = 2;
  required string ip = 3;
  required string deviceId = 4;
}
